<resources>
    <string name="app_name">Salaryzer</string>
    <string name="app_description">Статистика и анализ поступлений в одном приложении</string>
    <string name="app_start_button">Начать</string>
    <string name="main_button_add">Добавить</string>
    <string name="main_header_text">Поступления</string>
    <string name="main_select_month_and_year">Выберите месяц</string>
    <string name="error">Ошибка</string>
    <string name="JANUARY">Январь</string>
    <string name="FEBRUARY">Февраль</string>
    <string name="MARCH">Март</string>
    <string name="APRIL">Апрель</string>
    <string name="MAY">Май</string>
    <string name="JUNE">Июнь</string>
    <string name="JULY">Июль</string>
    <string name="AUGUST">Август</string>
    <string name="SEPTEMBER">Сентябрь</string>
    <string name="OCTOBER">Октябрь</string>
    <string name="NOVEMBER">Ноябрь</string>
    <string name="DECEMBER">Декабрь</string>
    <string name="main_average_salary">Средняя з/п</string>
    <string name="main_select_year">Выберите год</string>
    <string name="add_newAdd_header">Новое поступление</string>
    <string name="add_tv_typeOfSalary">Тип поступления</string>
    <string name="add_ed_Type_salary_quantity">Введите размер поступления</string>
    <string name="add_tv_salaryTime">Период</string>
</resources>
