<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    >

    <!-- Статистика анализ поступлений в одном приложении -->

    <TextView
        android:id="@+id/tv_appName"
        android:layout_width="wrap_content"
        android:layout_height="49sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="260dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="top"
        android:text="@string/app_name"
        android:textColor="#FA4A0C"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_appDescription"
        android:layout_width="303dp"
        android:layout_height="wrap_content"


        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/app_description"
        android:textColor="#1E1E1E"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_appName" />

    <!-- Button -->

    <Button
        android:id="@+id/b_start"
        style="@style/buttonTextStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#FA4A0C"
        android:onClick="onClickGoToMain"
        android:text="@string/app_start_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>


